syntax = "proto3";

option java_multiple_files = true;
option java_package = "com.regxkcd";
option java_outer_classname = "RegxkcdProto";
option objc_class_prefix = "HLW";

package regxkcd;

// The greeting service definition.
service Regxkcd {
  // Sends a message
  rpc GetMessage (GetMessageRequest) returns (GetMessageReply) {}
}

// The request message containing the user's name.
message GetMessageRequest {
  string name = 1;
}

// The response message containing the greetings
message GetMessageReply {
  string message = 1;
}
